<resources>
    <string name="app_name">PlaylistMaker</string>

    <string name="main_title">Playlist maker</string>
    <string name="main_search_button">Поиск</string>
    <string name="main_library_button">Медиатека</string>
    <string name="main_settings_button">Настройки</string>

    <string name="settings_title">Настройки</string>
    <string name="settings_dark_mode_switch">Темная тема</string>
    <string name="settings_share_button">Поделиться приложением</string>
    <string name="settings_support_button">Написать в поддержку</string>
    <string name="settings_agreement_button">Пользовательское соглашение</string>

    <string name="email_to">testmail@yandex.ru</string>
    <string name="email_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_message">https://practicum.yandex.ru/android-developer/?from=catalog</string>

    <string name="search_title">Поиск</string>
    <string name="search_placeholder">Ничего не нашлось</string>
    <string name="no_internet_placeholder">Проблемы со связью\n\nЗагрузка не удалась. Проверьте \nподключение к интернету</string>
    <string name="no_internet_placeholder_button">Обновить</string>

    <string name="history_header">Вы искали</string>
    <string name="history_button">Очистить историю</string>

    <string name="player_track_info_track_time">Длительность</string>
    <string name="player_track_info_album">Альбом</string>
    <string name="player_track_info_release_date">Год</string>
    <string name="player_track_info_genre">Жанр</string>
    <string name="player_track_info_country">Страна</string>
    <string name="player_default_time">00:30</string>
    <string name="player_no_data">-</string>

    <string name="library_title">Медиатека</string>
    <string name="library_fav_tracks_no_data">Ваша медиатека пуста</string>
    <string name="library_playlists_no_data">Вы не создали\n ни одного плейлиста</string>
    <string name="library_new_playlist_button">Новый плейлист</string>
    <string name="library_tab_fav_tracks">Избранные треки</string>
    <string name="library_tab_playlists">Плейлисты</string>

    <string name="new_playlist_title">Новый плейлист</string>
    <string name="new_playlist_name_hint">Название*</string>
    <string name="new_playlist_button">Создать</string>
    <string name="new_playlist_description_hint">Описание</string>
    <string name="player_header">Добавить в плейлист</string>
    <string name="player_new_playlist_button">Новый плейлист</string>

    <string name="create_playlist_alert_dialog_title">Завершить создание плейлиста?</string>
    <string name="create_playlist_alert_dialog_body">Все несохраненные данные будут потеряны</string>
    <string name="create_playlist_alert_dialog_negative_button">Отмена</string>
    <string name="create_playlist_alert_dialog_positive_button">Завершить</string>
    <string name="create_playlist_success_toast">Плейлист %1$s создан</string>

    <string name="playlist_track_alert_dialog_title">Удалить трек</string>
    <string name="playlist_track_alert_dialog_body">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="playlist_track_alert_dialog_negative_button">Отмена</string>
    <string name="playlist_track_alert_dialog_positive_button">Удалить</string>

    <string name="playlist_alert_dialog_title">Удалить плейлист</string>
    <string name="playlist_alert_dialog_body">Хотите удалить плейлист \"%1$s\"?</string>
    <string name="playlist_alert_dialog_negative_button">Нет</string>
    <string name="playlist_alert_dialog_positive_button">Да</string>

    <string name="edit_playlist_title">Редактировать плейлист</string>
    <string name="edit_playlist_button">Сохранить</string>

    <string name="playlist_add_track_to_playlist_success_toast">Добавлено в плейлист %1$s</string>
    <string name="playlist_add_track_to_playlist_failure_toast">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_no_tracks">В этом плейлисте нет треков</string>
    <string name="playlist_no_tracks_toast">В этом плейлисте нет списка треков, которыми можно поделиться</string>
    <string name="playlist_share_button">Поделиться</string>
    <string name="playlist_edit_button">Редактировать информацию</string>
    <string name="playlist_delete_button">Удалить плейлист</string>

    <plurals name="tracks">
        <item quantity="one">трек</item>
        <item quantity="two">трека</item>
        <item quantity="few">трека</item>
        <item quantity="other">треков</item>
    </plurals>
    
    <plurals name="minutes">
        <item quantity="one">минута</item>
        <item quantity="two">минуты</item>
        <item quantity="few">минуты</item>
        <item quantity="other">минут</item>
    </plurals>
</resources>