<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:titleTextColor="@color/text_primary"
        app:titleTextAppearance="@style/Toolbar.Main"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_block_height"
        android:layout_marginHorizontal="@dimen/margin_4x"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/settings_dark_mode_switch"
            android:textColor="@color/text_primary" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/darkThemeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_block_height"
        android:layout_marginHorizontal="@dimen/margin_4x">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/settings_share_button"
            android:textColor="@color/text_primary" />

        <ImageView
            android:id="@+id/shareButton"
            android:layout_width="@dimen/settings_icon_size"
            android:layout_height="@dimen/settings_icon_size"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/ic_share" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_block_height"
        android:layout_marginHorizontal="@dimen/margin_4x">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/settings_support_button"
            android:textColor="@color/text_primary" />

        <ImageView
            android:id="@+id/supportButton"
            android:layout_width="@dimen/settings_icon_size"
            android:layout_height="@dimen/settings_icon_size"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/ic_support" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_block_height"
        android:layout_marginHorizontal="@dimen/margin_4x">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/settings_agreement_button"
            android:textColor="@color/text_primary" />

        <ImageView
            android:id="@+id/agreementButton"
            android:layout_width="@dimen/settings_icon_size"
            android:layout_height="@dimen/settings_icon_size"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/ic_arrow_forward" />
    </FrameLayout>
</LinearLayout>