<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@style/Toolbar.Main"/>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_4x"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white_static"
        android:text="@string/main_search_button"
        android:textAllCaps="false"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_body"
        app:cornerRadius="@dimen/margin_4x"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/padding_2x"
        app:iconTint="@color/text_primary" />

    <Button
        android:id="@+id/libraryButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_4x"
        android:layout_marginTop="@dimen/margin_4x"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/main_library_button"
        android:textAllCaps="false"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_body"
        app:cornerRadius="@dimen/margin_4x"
        app:icon="@drawable/ic_library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/padding_2x"
        app:iconTint="@color/text_primary" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_4x"
        android:layout_marginTop="@dimen/margin_4x"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/main_settings_button"
        android:textAllCaps="false"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_body"
        app:cornerRadius="@dimen/radius_4x"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/padding_2x"
        app:iconTint="@color/text_primary" />
</LinearLayout>