<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/searchToolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize" />

    <LinearLayout
        android:id="@+id/searchField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_4x"
        android:background="@drawable/search_field_background"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp">

        <ImageView
            style="@style/SearchIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_search" />

        <EditText
            android:id="@+id/searchEditText"
            style="@style/SearchEditText"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@color/yp_light_gray"
            android:hint="@string/search_title" />

        <ImageView
            android:id="@+id/searchFieldClearButton"
            style="@style/SearchClearButton"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:visibility="invisible" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/searchLoaderProgressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="140dp"
            android:indeterminateTint="@color/yp_blue"
            android:layout_gravity="center_horizontal"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="@dimen/margin_4x"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/searchErrorContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_6x"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/searchPlaceholderImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/placeholder_no_data_error" />

            <TextView
                style="@style/WarningPlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_4x"
                android:text="@string/search_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/noInternetErrorContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_6x"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/noInternetPlaceholderImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/placeholder_no_internet_error"
                tools:visibility="visible" />

            <TextView
                style="@style/WarningPlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_4x"
                android:gravity="center_horizontal"
                android:text="@string/no_internet_placeholder"
                tools:visibility="visible" />

            <Button
                android:id="@+id/refreshButton"
                style="@style/SmallButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_6x"
                android:text="@string/no_internet_placeholder_button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/historyContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_4x"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                style="@style/TextHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/history_header" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/clearHistoryButton"
                style="@style/SmallButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_body"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/margin_6x"
                android:text="@string/history_button" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>