<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newPlaylistToolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <ImageView
        android:id="@+id/newPlaylistImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ph_new_image"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
        app:layout_constraintStart_toStartOf="@id/leftGuideLine"
        app:layout_constraintTop_toBottomOf="@id/newPlaylistToolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPlaylistNameContainer"
        style="@style/PlaylistEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cursorColor="@color/yp_blue"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/newPlaylistImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPlaylistNameEditText"
            style="@style/PlaylistEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_playlist_name_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPlaylistDescriptionContainer"
        style="@style/PlaylistEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cursorColor="@color/yp_blue"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/newPlaylistNameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPlaylistDescriptionEditText"
            style="@style/PlaylistEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_playlist_description_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/newPlaylistButton"
        style="@style/SmallButton2"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:text="@string/new_playlist_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
        app:layout_constraintStart_toStartOf="@id/leftGuideLine" />
</androidx.constraintlayout.widget.ConstraintLayout>